<resources>
    <string name="app_name">Eventure</string>
    <string name="login">Login</string>

    <string name="facebook_app_id">577191489424989</string>
    <string name="fb_login_protocol_scheme">fb577191489424989</string>
    <string name="user_profile_picture">User profile picture</string>

    <string name="wrong">Something went wrong</string>
    <string name="title_activity_maps">Map</string>


    <string name="nao">You cannot edit a group you are not admin of</string>
    <string name="events_you_are_attending">Events You Are Attending</string>
    <string name="invite_events">Event Invites</string>

    <string name="delete">Delete</string>
    <string name="askdelete">Are you sure you want to delete your event? This cannot be undone</string>
    <string name="decline">Decline</string>
    <string name="askdecline">Are you sure you want to hide this event? This cannot be undone</string>


    <string name="event_visibility">Event is visible to: </string>
    <string name="street_nr">Street, House Number</string>
    <string name="country_city">Country, City</string>
    <string name="long_description">Long Event Description</string>
    <string name="short_description">Short Event Description</string>
    <string name="event_title">Event Title</string>
    <string name="add_event">Add Event</string>
    <string name="fae">Friends are imminent</string>
    <string name="add_pics">Add pictures of the event below. To save a picture click it twice.</string>
    <string name="publics">Public Events</string>

    <string name="your_friends">Your Friends</string>
    <string name="friend_groups">Your Friend Groups</string>

    <string name="keh">Kinda empty here...</string>
    <string name="edit_event">Edit Event</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="wrong_delete">Something went wrong while deleting your account</string>
    <string name="format_input">Please check the format of your input</string>
    <string name="your_info">Your info</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="other">Other</string>
    <string name="delete_account">Delete Your Account</string>
    <string name="ypp">Your Profile Picture (Tap to edit)</string>
    <string name="unpp">Upload New Profile Picture</string>
    <string name="notifications">Notifications</string>

    <string name="qrcode">Add Friend</string>
    <string name="cfg">Friend Groups</string>
    <string name="friend_added">Friend was added</string>
    <string name="MyQr">Scan Your Friend"'s" Code</string>
    <string name="yqr">Your QR Code</string>
    <string name="wrong2">Something went wrong while creating your account</string>
    <string name="ysf">Your Selected Friends</string>

    <string name="friendgroupActivity">Please only select a single group or a bunch of friends to edit.</string>
    <string name="create_new_group">Create new friend group: </string>
    <string name="group_name">Group name: </string>
    <string name="yfgn">Your friend group</string>

</resources>
