<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/yfgn"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ysf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="22dp"
                android:background="@android:color/black" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/selected_friends"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/create_new_group" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="22dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_name" />

                <EditText
                    android:id="@+id/group_nametext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="8dp"
            android:onClick="createNewFriendGroup"
            android:src="@drawable/continue_button"
            android:tint="#FFFFFF"
            app:backgroundTint="@color/colorPrimary" />
    </FrameLayout>
</LinearLayout>