<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InviteFriendsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:titleTextColor="@android:color/white"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/MyToolbarTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_groups"
                android:textStyle="bold"
                android:id="@+id/title1"
                android:textSize="22dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                android:layout_marginLeft="4dp"
                android:id="@+id/view1"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/friend_groups"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_height="140dp">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_friends"
                android:textStyle="bold"
                android:textSize="22dp"
                android:id="@+id/title2"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view2"
                android:background="@android:color/black"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/your_friends"/>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>


